// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render dropdown when recently accessed list size is NUM_LONG_LINKS 1`] = `
<EuiPanel
  grow={true}
  hasShadow={false}
  paddingSize="l"
>
  <EuiText>
    <p>
      <EuiTextColor
        color="subdued"
      >
        Recently accessed
      </EuiTextColor>
    </p>
  </EuiText>
  <EuiSpacer
    size="s"
  />
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <React.Fragment
      key="0"
    >
      <EuiFlexItem
        className="recentlyAccessedItem"
        component="div"
        grow={false}
        style={
          Object {
            "minWidth": "3.9000000000000004em",
          }
        }
      >
        <EuiLink
          className="recentlyAccessedLongLink"
          color="primary"
          href="link0"
          type="button"
        >
          label0
        </EuiLink>
      </EuiFlexItem>
    </React.Fragment>
    <React.Fragment
      key="1"
    >
      <EuiFlexItem
        className="recentlyAccessedSeparator"
        component="div"
        grow={false}
      >
        <EuiText>
          <EuiIcon
            color="subdued"
            size="m"
            type="dot"
          />
        </EuiText>
      </EuiFlexItem>
      <EuiFlexItem
        className="recentlyAccessedItem"
        component="div"
        grow={false}
        style={
          Object {
            "minWidth": "3.9000000000000004em",
          }
        }
      >
        <EuiLink
          className="recentlyAccessedLongLink"
          color="primary"
          href="link1"
          type="button"
        >
          label1
        </EuiLink>
      </EuiFlexItem>
    </React.Fragment>
    <React.Fragment
      key="2"
    >
      <EuiFlexItem
        className="recentlyAccessedSeparator"
        component="div"
        grow={false}
      >
        <EuiText>
          <EuiIcon
            color="subdued"
            size="m"
            type="dot"
          />
        </EuiText>
      </EuiFlexItem>
      <EuiFlexItem
        className="recentlyAccessedItem"
        component="div"
        grow={false}
        style={
          Object {
            "minWidth": "3.9000000000000004em",
          }
        }
      >
        <EuiLink
          className="recentlyAccessedLongLink"
          color="primary"
          href="link2"
          type="button"
        >
          label2
        </EuiLink>
      </EuiFlexItem>
    </React.Fragment>
    <React.Fragment
      key="3"
    >
      <EuiFlexItem
        className="recentlyAccessedSeparator"
        component="div"
        grow={false}
      >
        <EuiText>
          <EuiIcon
            color="subdued"
            size="m"
            type="dot"
          />
        </EuiText>
      </EuiFlexItem>
      <EuiFlexItem
        className="recentlyAccessedItem"
        component="div"
        grow={false}
        style={
          Object {
            "minWidth": "3.9000000000000004em",
          }
        }
      >
        <EuiLink
          className="recentlyAccessedLongLink"
          color="primary"
          href="link3"
          type="button"
        >
          label3
        </EuiLink>
      </EuiFlexItem>
    </React.Fragment>
    <React.Fragment
      key="4"
    >
      <EuiFlexItem
        className="recentlyAccessedSeparator"
        component="div"
        grow={false}
      >
        <EuiText>
          <EuiIcon
            color="subdued"
            size="m"
            type="dot"
          />
        </EuiText>
      </EuiFlexItem>
      <EuiFlexItem
        className="recentlyAccessedItem"
        component="div"
        grow={false}
        style={
          Object {
            "minWidth": "3.9000000000000004em",
          }
        }
      >
        <EuiLink
          className="recentlyAccessedLongLink"
          color="primary"
          href="link4"
          type="button"
        >
          label4
        </EuiLink>
      </EuiFlexItem>
    </React.Fragment>
  </EuiFlexGroup>
</EuiPanel>
`;

exports[`should not render dropdown when recently accessed list size is less than NUM_LONG_LINKS 1`] = `
<EuiPanel
  grow={true}
  hasShadow={false}
  paddingSize="l"
>
  <EuiText>
    <p>
      <EuiTextColor
        color="subdued"
      >
        Recently accessed
      </EuiTextColor>
    </p>
  </EuiText>
  <EuiSpacer
    size="s"
  />
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <React.Fragment
      key="0"
    >
      <EuiFlexItem
        className="recentlyAccessedItem"
        component="div"
        grow={false}
        style={
          Object {
            "minWidth": "3.9000000000000004em",
          }
        }
      >
        <EuiLink
          className="recentlyAccessedLongLink"
          color="primary"
          href="link0"
          type="button"
        >
          label0
        </EuiLink>
      </EuiFlexItem>
    </React.Fragment>
    <React.Fragment
      key="1"
    >
      <EuiFlexItem
        className="recentlyAccessedSeparator"
        component="div"
        grow={false}
      >
        <EuiText>
          <EuiIcon
            color="subdued"
            size="m"
            type="dot"
          />
        </EuiText>
      </EuiFlexItem>
      <EuiFlexItem
        className="recentlyAccessedItem"
        component="div"
        grow={false}
        style={
          Object {
            "minWidth": "3.9000000000000004em",
          }
        }
      >
        <EuiLink
          className="recentlyAccessedLongLink"
          color="primary"
          href="link1"
          type="button"
        >
          label1
        </EuiLink>
      </EuiFlexItem>
    </React.Fragment>
    <React.Fragment
      key="2"
    >
      <EuiFlexItem
        className="recentlyAccessedSeparator"
        component="div"
        grow={false}
      >
        <EuiText>
          <EuiIcon
            color="subdued"
            size="m"
            type="dot"
          />
        </EuiText>
      </EuiFlexItem>
      <EuiFlexItem
        className="recentlyAccessedItem"
        component="div"
        grow={false}
        style={
          Object {
            "minWidth": "3.9000000000000004em",
          }
        }
      >
        <EuiLink
          className="recentlyAccessedLongLink"
          color="primary"
          href="link2"
          type="button"
        >
          label2
        </EuiLink>
      </EuiFlexItem>
    </React.Fragment>
    <React.Fragment
      key="3"
    >
      <EuiFlexItem
        className="recentlyAccessedSeparator"
        component="div"
        grow={false}
      >
        <EuiText>
          <EuiIcon
            color="subdued"
            size="m"
            type="dot"
          />
        </EuiText>
      </EuiFlexItem>
      <EuiFlexItem
        className="recentlyAccessedItem"
        component="div"
        grow={false}
        style={
          Object {
            "minWidth": "3.9000000000000004em",
          }
        }
      >
        <EuiLink
          className="recentlyAccessedLongLink"
          color="primary"
          href="link3"
          type="button"
        >
          label3
        </EuiLink>
      </EuiFlexItem>
    </React.Fragment>
  </EuiFlexGroup>
</EuiPanel>
`;

exports[`should render dropdown when recently accessed list size exceeds NUM_LONG_LINKS 1`] = `
<EuiPanel
  grow={true}
  hasShadow={false}
  paddingSize="l"
>
  <EuiText>
    <p>
      <EuiTextColor
        color="subdued"
      >
        Recently accessed
      </EuiTextColor>
    </p>
  </EuiText>
  <EuiSpacer
    size="s"
  />
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <React.Fragment
      key="0"
    >
      <EuiFlexItem
        className="recentlyAccessedItem"
        component="div"
        grow={false}
        style={
          Object {
            "minWidth": "3.9000000000000004em",
          }
        }
      >
        <EuiLink
          className="recentlyAccessedLongLink"
          color="primary"
          href="link0"
          type="button"
        >
          label0
        </EuiLink>
      </EuiFlexItem>
    </React.Fragment>
    <React.Fragment
      key="1"
    >
      <EuiFlexItem
        className="recentlyAccessedSeparator"
        component="div"
        grow={false}
      >
        <EuiText>
          <EuiIcon
            color="subdued"
            size="m"
            type="dot"
          />
        </EuiText>
      </EuiFlexItem>
      <EuiFlexItem
        className="recentlyAccessedItem"
        component="div"
        grow={false}
        style={
          Object {
            "minWidth": "3.9000000000000004em",
          }
        }
      >
        <EuiLink
          className="recentlyAccessedLongLink"
          color="primary"
          href="link1"
          type="button"
        >
          label1
        </EuiLink>
      </EuiFlexItem>
    </React.Fragment>
    <React.Fragment
      key="2"
    >
      <EuiFlexItem
        className="recentlyAccessedSeparator"
        component="div"
        grow={false}
      >
        <EuiText>
          <EuiIcon
            color="subdued"
            size="m"
            type="dot"
          />
        </EuiText>
      </EuiFlexItem>
      <EuiFlexItem
        className="recentlyAccessedItem"
        component="div"
        grow={false}
        style={
          Object {
            "minWidth": "3.9000000000000004em",
          }
        }
      >
        <EuiLink
          className="recentlyAccessedLongLink"
          color="primary"
          href="link2"
          type="button"
        >
          label2
        </EuiLink>
      </EuiFlexItem>
    </React.Fragment>
    <React.Fragment
      key="3"
    >
      <EuiFlexItem
        className="recentlyAccessedSeparator"
        component="div"
        grow={false}
      >
        <EuiText>
          <EuiIcon
            color="subdued"
            size="m"
            type="dot"
          />
        </EuiText>
      </EuiFlexItem>
      <EuiFlexItem
        className="recentlyAccessedItem"
        component="div"
        grow={false}
        style={
          Object {
            "minWidth": "3.9000000000000004em",
          }
        }
      >
        <EuiLink
          className="recentlyAccessedLongLink"
          color="primary"
          href="link3"
          type="button"
        >
          label3
        </EuiLink>
      </EuiFlexItem>
    </React.Fragment>
    <React.Fragment
      key="4"
    >
      <EuiFlexItem
        className="recentlyAccessedSeparator"
        component="div"
        grow={false}
      >
        <EuiText>
          <EuiIcon
            color="subdued"
            size="m"
            type="dot"
          />
        </EuiText>
      </EuiFlexItem>
      <EuiFlexItem
        className="recentlyAccessedItem"
        component="div"
        grow={false}
        style={
          Object {
            "minWidth": "3.9000000000000004em",
          }
        }
      >
        <EuiLink
          className="recentlyAccessedLongLink"
          color="primary"
          href="link4"
          type="button"
        >
          label4
        </EuiLink>
      </EuiFlexItem>
    </React.Fragment>
    <EuiFlexItem
      component="div"
      grow={false}
      key="dropdown"
    >
      <EuiPopover
        anchorPosition="downRight"
        button={
          <EuiLink
            color="primary"
            onClick={[Function]}
            type="button"
          >
            <EuiTextColor
              className="recentlyAccessedDropdownLabel"
              color="subdued"
            >
              1 more link
            </EuiTextColor>
            <EuiIcon
              color="subdued"
              size="m"
              type="arrowDown"
            />
          </EuiLink>
        }
        closePopover={[Function]}
        id="popover"
        isOpen={false}
        ownFocus={true}
        panelPaddingSize="m"
      >
        <ul>
          <li
            key="5"
            style={
              Object {
                "marginBottom": 8,
              }
            }
          >
            <EuiLink
              className="recentlyAccessedDropwdownLink"
              color="primary"
              href="link5"
              type="button"
            >
              label5
            </EuiLink>
          </li>
        </ul>
      </EuiPopover>
    </EuiFlexItem>
  </EuiFlexGroup>
</EuiPanel>
`;
